spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-fabric8-client-reload/src/test/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
<<<<<<<< HEAD:spring-cloud-kubernetes-integration-tests/fabric8-client-configmap-polling-and-import-reload/src/test/resources/ingress.yaml
  name: spring-k8s-client-ingress-reload
========
  name: spring-cloud-kubernetes-fabric8-client-reload-ingress
>>>>>>>> main:spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-fabric8-client-reload/src/test/resources/ingress.yaml
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
<<<<<<<< HEAD:spring-cloud-kubernetes-integration-tests/fabric8-client-configmap-polling-and-import-reload/src/test/resources/ingress.yaml
                name: fabric8-client-configmap-polling-and-import-reload
========
                name: spring-cloud-kubernetes-fabric8-client-reload
>>>>>>>> main:spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-fabric8-client-reload/src/test/resources/ingress.yaml
                port:
                  number: 8080
